[package]
name = "which-dex"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.8", features = ["full"] }
tlsh2 = { version = "0.3", features = ["diff"] }
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"

[[example]]
name = "tlsh_compare"
path = "examples/tlsh_compare.rs"
